# routes/api/employees.js
@@ -2,8 +2,9 @@ const express = require('express');
 const router = express.Router();
 const employeesController = require('../../controllers/employeesController.js');
 
+router.route('/get')
+    .get(employeesController.getAllEmployees);
 router.route('/')
-    .get(employeesController.getAllEmployees)
     .post(employeesController.createNewEmployee)
     .put(employeesController.updateEmployee)
     .delete(employeesController.deleteEmployee);
