# swagger/swaggerConfig.json
@@ -29,103 +29,230 @@
   ],
   "produces": ["application/json"],
   "paths": {
-    "/employee": {
-      "post": {
+   "/employee": {
+        "produces": ["application/json"],
+        "post": {
+          "tags": ["Employee"],
+          "summary": "Register the user",
+          "parameters": [
+            {
+              "name": "user",
+              "in": "body",
+              "description": "User that we want to create",
+              "schema": {
+                "$ref": "#/definitions/createNewEmployee"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "ok",
+              "schema": {
+                "$ref": "#/definitions/createNewEmployee"
+              }
+            },
+            "201": {
+              "description": "Created"
+            },
+            "204": {
+              "description": "No Content"
+            },
+            "301": {
+              "description": "Moved Permanently"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "403": {
+              "description": "Forbidden"
+            },
+            "404": {
+              "description": "Not Found"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          }
+        }
+    },
+    "/employee/get": {
+      "get": {
         "tags": ["Employee"],
-        "summary": "createNewEmployee",
+        "summary": "getAllEmployees",
         "responses": {
           "200": {
-            " ": "ok",
+            "description": "ok",
             "schema": {
-              "$ref": "#/definitions/Users"
+              "$ref": "#/definitions/getAllEmployees"
             }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "301": {
+            "description": "Moved Permanently"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/user": {
+    "/employee/{id}": {
       "parameters": [
         {
           "name": "id",
-          "in": "query",
+          "in": "path",
+          "required": true,
+          "description": "Id of the user which is to be deleteEmployee",
+          "type": "string"
+        }
+      ],
+      "produces": ["application/json"],
+      "delete": {
+        "tags": ["Employee"],
+        "summary": "Delete user by id",
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/deleteEmployee"
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "301": {
+            "description": "Moved Permanently"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/employee/id": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
           "required": true,
           "description": "Id of the user which is to be searched",
-          "type": "integer"
+          "type": "string"
         }
       ],
       "produces": ["application/json"],
       "get": {
-        "tags": ["Users"],
+        "tags": ["Employee"],
         "summary": "Get user by id",
         "responses": {
           "200": {
             "description": "ok",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/getAllEmployees"
             }
           },
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "301": {
+            "description": "Moved Permanently"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
-            "description": "not found"
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     }
   },
   "definitions": {
-    "User": {
-      "required": ["name", "_id", "companies"],
-      "properties": {
-        "id": {
-          "type": "integer",
-          " ": true
-        },
-        "name": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "address": {
-          "type": "object",
+    "createNewEmployee": {
           "properties": {
-            "street": {
+            "firstname": {
               "type": "string"
             },
-            "suite": {
-              "type": "string"
-            },
-            "city": {
-              "type": "string"
-            },
-            "zipcode": {
+            "lastname": {
               "type": "string"
             }
           }
-        },
-        "phone": {
+    },
+    "getAllEmployees": {
+      "required": ["id", "firstname", "lastname"],
+      "properties": {
+        "Message": {
           "type": "string"
         },
-        "website": {
-          "type": "string"
+        "total": {
+          "type": "integer"
         },
-        "company": {
+        "results": {
           "type": "object",
           "properties": {
-            "name": {
+            "id": {
+              "type": "string",
+              "uniqueItems": true
+            },
+            "firstname": {
               "type": "string"
             },
-            "catchPhrase": {
-              "type": "string"
-            },
-            "bs": {
+            "lastname": {
               "type": "string"
             }
           }
         }
       }
+    },
+    "deleteEmployee": {
+      "type": "array",
+      "$ref": "#/definitions/DeletedUser"
     },
     "Users": {
       "type": "array",
